// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhasesTable /> should render expected JSX 1`] = `
<table
  className="table table-md w-auto"
>
  <thead
    className="thead-light"
  >
    <tr>
      <th>
        <FormattedMessage
          defaultMessage="Phase"
          id="app.components.PhasesTable.headerPhase"
          values={Object {}}
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Status"
          id="app.components.PhasesTable.headerStatus"
          values={Object {}}
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Duration"
          id="app.components.PhasesTable.headerDuration"
          values={Object {}}
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        SUBMITTED
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        PROVISIONING
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={8}
        />
      </td>
    </tr>
    <tr>
      <th>
        DOWNLOAD_SOURCE
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        INSTALL
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={5}
        />
      </td>
    </tr>
    <tr>
      <th>
        PRE_BUILD
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        BUILD
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        POST_BUILD
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        UPLOAD_ARTIFACTS
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={0}
        />
      </td>
    </tr>
    <tr>
      <th>
        FINALIZING
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        <TimeDuration
          seconds={2}
        />
      </td>
    </tr>
    <tr>
      <th>
        COMPLETED
      </th>
      <td>
        <PhaseStatus
          status="SUCCEEDED"
        />
      </td>
      <td>
        -
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<PhasesTable /> should render expected JSX 2`] = `
<table
  class="table table-md w-auto"
>
  <thead
    class="thead-light"
  >
    <tr>
      <th>
        <span>
          Phase
        </span>
      </th>
      <th>
        <span>
          Status
        </span>
      </th>
      <th>
        <span>
          Duration
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        SUBMITTED
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        PROVISIONING
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          8 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        DOWNLOAD_SOURCE
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        INSTALL
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          5 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        PRE_BUILD
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        BUILD
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        POST_BUILD
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        UPLOAD_ARTIFACTS
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          0 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        FINALIZING
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        <span>
          2 seconds
        </span>
      </td>
    </tr>
    <tr>
      <th>
        COMPLETED
      </th>
      <td>
        <span
          style="color:#28a745"
        >
          <i
            class="fas fa-check fa-fw mr-1"
          />
          <span>
            SUCCEEDED
          </span>
        </span>
      </td>
      <td>
        -
      </td>
    </tr>
  </tbody>
</table>
`;
